--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-body {
+#heading1 {
+    text-align: center;
+}
+
+.btn-calc {
     text-align: center;
 }
 
@@ -8,16 +12,23 @@ body {
     line-height: 80px; /* ボタン内のテキストを中央揃え */
     text-align: center; /* ボタン内のテキストを中央揃え */
     padding: 0; /* ボタン内の余白を0に設定 */
+    margin-bottom: 5px;
 }
 
-.btn-calc #initial {
+#initial {
     width: 333px;
-    background-color: rgb(229, 210, 210);
-}
-
-p {
+    height: 70px;
+    background-color:rgb(229, 210, 210);
+    border-radius: 7px;
+    margin: 0 auto;
+    margin-bottom: 5px;
     text-align: right;
-    margin-right: 20px;
-    border-style: none;
+    padding-right: 30px;
+    padding-top: 12px;
+    font-size: 30px;
 }
 
+#equal {
+    background-color: rgb(255, 98, 0);
+    color: white;
+}
